--- a/ThesisProject/Views/Home/Favorites.cshtml
+++ b/ThesisProject/Views/Home/Favorites.cshtml
@@ -1,8 +1,9 @@
-﻿@model UserModel
+﻿@model List<SongModel>
 
 @section Styles{
-    <link rel="stylesheet" href="~/css/MoodsStyle.css" />
+
     <link rel="stylesheet" href="~/css/MenuStyle.css" />
+    <link rel="stylesheet" href="~/css/PlaylistsStyle.css" />
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 
 }
@@ -37,7 +38,7 @@
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a class="favbtn" href="#">
+                        <a class="favbtn" asp-controller="Home" asp-route-username="@ViewBag.username" asp-action="Favorites">
                             <i class='bx bx-heart icon'></i>
                             <span class="text nav-text">Favorites</span>
                         </a>
@@ -82,19 +83,77 @@
     <section class="home">
 
         <div class="header">
-            <div class="text title">Favorites</div>
+            <div class="text title">Your favorites</div>
             <div class="right-corner">
-                <img src="~/Resources/icons8-male-user-24 (1).png"></img>
-
+                <img src="~/Resources/icons8-male-user-24 (1).png" />
                 <div class="smalltext username ">@ViewBag.username </div>
             </div>
         </div>
         <div class="main">
+            <div class="song-list">
 
+                <audio class="audio" id="audioplayer">
+                </audio>
+
+                <table>
+                    @if (Model.Count() != 0)
+                    {
+                        <thead>
+                            <tr>
+
+                                <td></td>
+                                <td class="sname h  text">Song</td>
+                                <td class="artist h text">Artist</td>
+                                <td class="duration  h text">Duration</td>
+                                <td></td>
+                            </tr>
+
+                        </thead>
+                        @foreach (var item in Model)
+                        {
+
+                            <tr class="song">
+
+                                <td>
+                                    <span class="play-icon " onclick="playAudio('@item.songfile',this)">
+                                        <i class='bx bx-play bx-flip-vertical buttons' style="display:inline-block"></i>
+                                        <i class='bx bx-pause' style="display:none"></i>
+                                    </span>
+                                    <span class="pause-icon hidden" onclick="playAudio('@item.songfile',this)">
+
+                                    </span>
+                                </td>
+
+                                <td class="sname text">@item.songname</td>
+                                <td class="artist text">@item.artist</td>
+                                <td class="duration text">@item.duration</td>                                                               
+                                <td>
+                                        <form asp-controller="Home" asp-action="Unlike" asp-route-username="@ViewBag.Username" method="post" class="like-btn">
+                                            <input type="hidden" name="username" value="@ViewBag.username" />
+                                            <input type="hidden" name="mood" value="@item.mood" />
+                                            <input type="hidden" name="songid" value="@item.songId" />
+                                            <input type="hidden" name="isliked" value="@true" />
+                                            <button type="submit" class="heart">
+                                                <i class='bx bxs-heart icon buttons '></i>
+                                            </button>
+                                        </form>
+                                </td>
+                                
+                            </tr>
+                        }
+                    }
+                    else
+                    {
+                        <tr>You haven't liked any songs!</tr>
+                    }
+
+                </table>
+            </div>
         </div>
 
 
         <div class="song-managing">
+
             <div class="buttons">
                 <i class='bx bx-skip-previous'></i>
                 <i class='bx bx-pause pause' onclick="Hide()"></i>
@@ -108,19 +167,62 @@
 
     <!--Javascripts-->
     <script>
-        function Hide() {
+        //function Hide(source,element) {
 
-            const play = document.querySelector('[class*=play]');
-            const pause = document.querySelector('[class*=pause]');
-            if (play.style.display === 'block' && pause.style.display === 'none') {
-                play.style.display = 'none';
-                pause.style.display = 'block';
+        //    const play = element.querySelector('[class*=play]');
+        //    const pause = element.querySelector('[class*=pause]');
+        //    var audioPlayer = document.getElementById('audioplayer');
+
+        //    if (play.style.display === 'block' && pause.style.display === 'none') {
+        //        play.style.display = 'none';
+        //        pause.style.display = 'block';
+        //    }
+        //    else {
+        //        play.style.display = 'block';
+        //        pause.style.display = 'none';
+        //    }
+
+
+        //}
+
+
+        function playAudio(source, element) {
+
+            var audioPlayer = document.getElementById('audioplayer');
+            var playIcon = element.querySelector('.bx-play');
+            var pauseIcon = element.querySelector('.bx-pause');
+
+
+            if (!audioPlayer.paused) {
+                audioPlayer.pause();
+                pauseIcon.style.display = 'none';
+                playIcon.style.display = 'inline-block';
+
             }
-            else {
-                play.style.display = 'block';
-                pause.style.display = 'none';
+            else if (audioPlayer.paused) {
+                audioPlayer.src = source;
+                audioPlayer.play();
+                pauseIcon.style.display = 'inline-block';
+                playIcon.style.display = 'none';
+
             }
 
+
+            //
+            //var element = element.currentTarget;
+
+            //if(audioPlayer.paused){
+            //    audioPlayer.src = source;
+            //    audioPlayer.play();
+            //    element.getElementsByClassName('play-button')[0].style.display = 'none';
+            //    document.getElementsByClassName('pause-button').style.display = 'inline';
+            //}
+
+            //else {
+            //    audioPlayer.pause();
+            //    element.querySelector('.play-button').style.display = 'inline';
+            //    element.querySelector('pause-button').style.display = 'none';
+            //}
 
         }
 
@@ -153,4 +255,6 @@
 
     </script>
 </body>
+
+
 
