--- a/ThesisProject/wwwroot/css/MoodsStyle.css
+++ b/ThesisProject/wwwroot/css/MoodsStyle.css
@@ -4,7 +4,7 @@
     /* ===== Colors ===== */
     --body-color: #E4E9F7;
     --sidebar-color: #FFF;
-    --primary-color: #695CFE;
+    --primary-color: #f5c0e0;
     --primary-color-light: #F6F5FF;
     --toggle-color: #DDD;
     --text-color: #707070;
