--- a/ThesisProject/wwwroot/css/PlaylistsStyle.css
+++ b/ThesisProject/wwwroot/css/PlaylistsStyle.css
@@ -1,13 +1,13 @@
 ﻿
-
 :root {
     /* ===== Colors ===== */
-    --body-color: #FFF;
+    --body-color: #fff;
     --sidebar-color: #FFF;
-    --primary-color: #695CFE;
+    --primary-color: #f5c0e0;
     --primary-color-light: #F6F5FF;
     --toggle-color: #DDD;
     --text-color: #707070;
+    --light-text-color: #white;
     --pink: #FF33CC;
     --light-pink: #FF66CC;
     --light-blue: #33CCFF;
@@ -18,7 +18,6 @@
     --tran-04: all 0.3s ease;
     --tran-05: all 0.3s ease;
 }
-
 .header {
     display: flex;
     flex-direction: row;
@@ -42,20 +41,45 @@
 
 }
 
-.main{
-    width:100%;
-    height:100%;
-    display:flex;
-    flex-direction:row;
-    padding:5%;
+.main {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    padding-left: 6%;
+    padding-right: 6%;
+    padding-top:3%;
 }
 
-table{
-    width:100%;
+table {
+    width: 100%;
+    border-collapse: collapse;
 }
+
 .song-list{
     width:100%;   
     
+}
+.song td{
+   border:none;
+   padding:0.07%;
+}
+
+td:first-child,
+th:first-child {
+    border-radius: 10px 0 0 10px;
+}
+
+
+td:last-child,
+th:last-child {
+    border-radius: 0 10px 10px 0;
+}
+
+.song:hover {
+    transform: scale(1.01);
+    background-color: var(--primary-color-light);
+    transition:var(--tran-05);
 }
 
 .song-list .text{
@@ -63,12 +87,14 @@ table{
     font-weight:400;
     padding:0;
 }
-.song .play{
-    cursor:pointer;
+.song .play-icon {
+    cursor: pointer;
+    transition: var(--tran-05);
 }
 
-.pause-icon{
-    cursor:pointer;
+.pause-icon {
+    cursor: pointer;
+    transition: var(--tran-03);
 }
 
  .duration{
@@ -127,6 +153,7 @@ table{
     color: var(--text-color);
     transition: var(--tran-03);
     font-size: 20px;
+    cursor:pointer;
 }
 
     .buttons i {
@@ -135,6 +162,9 @@ table{
 
     .like-btn{
         text-align:center;
+        display:flex;
+        justify-content:center;
+        align-items:center;
     }
 .heart {   
     background-color: transparent;
