--- a/ThesisProject/Views/Home/Profile.cshtml
+++ b/ThesisProject/Views/Home/Profile.cshtml
@@ -90,6 +90,12 @@
             </div>
         </div>
         <div class="main">
+            <div class="information">
+
+            </div>
+            <div class="statistics">
+
+            </div>
         </div>
 
 
