removed controls + added 40 songs

--- a/ThesisProject/Views/Home/Favorites.cshtml
+++ b/ThesisProject/Views/Home/Favorites.cshtml
@@ -148,8 +148,7 @@
             </div>
         </div>
 
-
-        <div class="song-managing">
+        <!--<div class="song-managing">
 
             <div class="buttons">
                 <i class='bx bx-skip-previous'></i>
@@ -157,7 +156,8 @@
                 <i class='bx bx-play bx-flip-vertical play' onclick="Hide()"></i>
                 <i class='bx bx-skip-next'></i>
             </div>
-        </div>
+        </div>-->
+        
 
     </section>
 
