--- a/ThesisProject/Views/Home/Homepage.cshtml
+++ b/ThesisProject/Views/Home/Homepage.cshtml
@@ -91,15 +91,15 @@
 
         </div>
 
-
-        <div class="song-managing">
+        <!-- <div class="song-managing">
             <div class="buttons">
                 <i class='bx bx-skip-previous'></i>
                 <i class='bx bx-pause pause' onclick="Hide()"></i>
                 <i class='bx bx-play bx-flip-vertical play' onclick="Hide()"></i>
                 <i class='bx bx-skip-next'></i>
             </div>
-        </div>
+        </div>-->
+       
 
     </section>
 
