--- a/ThesisProject/Views/Home/Playlists.cshtml
+++ b/ThesisProject/Views/Home/Playlists.cshtml
@@ -125,9 +125,9 @@
                                     </span>
                                   
                                     
-                                </td>                                
-                                                                                              
-                                <td class="sname text">@item.Song.songname</td>
+                                </td>
+
+                                <td class="sname text"><div class="sname">@item.Song.songname</div></td>
                                 <td class="artist text">@item.Song.artist</td>
                                 <td class="duration text">@item.Song.duration</td>
                                 @if (!item.isLiked)
@@ -171,16 +171,16 @@
             </div>
        </div>
 
+        <!--  <div class="song-managing">
 
-        <div class="song-managing">
-            
-            <div class="buttons">
-                <i class='bx bx-skip-previous'></i>
-                <i class='bx bx-pause pause' onclick="Hide()"></i>
-                <i class='bx bx-play bx-flip-vertical play' onclick="Hide()"></i>
-                <i class='bx bx-skip-next'></i>
-            </div>
-        </div>
+             <div class="buttons">
+                 <i class='bx bx-skip-previous'></i>
+                 <i class='bx bx-pause pause' onclick="Hide()"></i>
+                 <i class='bx bx-play bx-flip-vertical play' onclick="Hide()"></i>
+                 <i class='bx bx-skip-next'></i>
+             </div>
+         </div>-->
+      
 
     </section>
 
